INTYGFV-15582: Refactored to/from-sickLeaveLength into SickLeaveLengthInterval. Updated affected tests and filters.